@@ -8,6 +8,7 @@ firefox-trunk (89.0~a1~hg20210322r572328-0ubuntu1) UNRELEASED; urgency=medium
     - debian/patches/armhf-rustc-thin-lto.patch
   * Update patches
     - debian/patches/armhf-do-not-build-qcms-with-neon.patch
+    - debian/patches/armhf-reduce-linker-memory-use.patch
   * Update cbindgen to 0.19.0
     - debian/build/create-tarball.py
 
